language/move-lang/tests/move_check/parser/function_visibility_invalid.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_visibility_invalid.move:2:5
  │
2 │     public(invalid_modifier) fun f() {}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid visibility modifier. Consider removing it or using one of 'public', 'public(script)', or 'public(friend)'

