language/move-lang/tests/move_check/parser/function_visibility_invalid.move
module M {
    public(invalid_modifier) fun f() {}
}
